Bug 33118 - [4.3 Regression] #'argument_pack_select' not supported by dump_expr#<expression error>
Summary: [4.3 Regression] #'argument_pack_select' not supported by dump_expr#<expressi...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: 4.3.0
: P2 normal
Target Milestone: 4.3.0
Assignee: Paolo Carlini
URL:
Keywords: diagnostic
: 33214 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-08-20 01:59 UTC by Andrew Pinski
Modified: 2007-09-28 15:10 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2007-09-06 20:08:16


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Pinski 2007-08-20 01:59:01 UTC
Testcase:
template <typename _Tp>
struct __add_const_lvalue_reference;
template<typename... _Elements>
class tuple
{
  tuple(typename __add_const_lvalue_reference<_Elements>::type ...) ;
};
tuple<int&, int&, int&> i;

--------- CUT -----
Found while cutting down PR 33091.  This is a regression because the error message was ok in 4.2.0 and before.
On the trunk we get:
t.cc: In instantiation of 'tuple<#'argument_pack_select' not supported by dump_expr#<expression error> >':
t.cc:8:   instantiated from here
t.cc:6: error: invalid use of incomplete type 'struct __add_const_lvalue_reference<int&>'
Comment 1 Volker Reichelt 2007-08-28 20:06:40 UTC
*** Bug 33214 has been marked as a duplicate of this bug. ***
Comment 2 Andrew Pinski 2007-09-06 20:08:16 UTC
Confirmed, based on dup.
Comment 3 Paolo Carlini 2007-09-24 14:07:45 UTC
On it.
Comment 4 paolo@gcc.gnu.org 2007-09-28 15:10:27 UTC
Subject: Bug 33118

Author: paolo
Date: Fri Sep 28 15:10:13 2007
New Revision: 128866

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=128866
Log:
2007-09-28  Paolo Carlini  <pcarlini@suse.de>

	PR c++/33118
	* error.c (dump_expr): Deal with ARGUMENT_PACK_SELECT.
	(dump_type): Use dump_template_argument for TYPE_ARGUMENT_PACK.
	(dump_parameters): Just call dump_type for argument packs too.

Modified:
    trunk/gcc/cp/ChangeLog
    trunk/gcc/cp/error.c

Comment 5 Paolo Carlini 2007-09-28 15:10:56 UTC
Fixed.