2007-09-28  Paolo Carlini  <pcarlini@suse.de>

PR c++/33118
	* error.c (dump_expr): Deal with ARGUMENT_PACK_SELECT.
	(dump_type): Use dump_template_argument for TYPE_ARGUMENT_PACK.
	(dump_parameters): Just call dump_type for argument packs too.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@128866 138bc75d-0d04-0410-961f-82ee72b054a4